// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package core

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type RobotToken struct {
	ID        int32
	RobotID   int32
	Token     string
	CreatedAt pgtype.Timestamp
	ExpiresAt pgtype.Timestamp
}

type TAclMatch struct {
	ID          int32
	UserGroupID pgtype.Int4
	UserID      pgtype.Int4
	RuleID      pgtype.Int4
	RoleID      pgtype.Int4
}

type TAppAbout struct {
	ID        int32
	Content   string
	Links     string
	UpdatedAt pgtype.Timestamp
}

type TAppBanner struct {
	ID        int32
	Type      string
	Title     string
	Message   string
	Active    bool
	Color     string
	CreatedAt pgtype.Timestamp
	UpdatedAt pgtype.Timestamp
	ColorDark string
	Starts    pgtype.Timestamp
	Ends      pgtype.Timestamp
}

type TAppUpcoming struct {
	ID        int32
	Content   string
	UpdatedAt pgtype.Timestamp
}

type TAppUpdate struct {
	ID          int32
	Title       string
	Description string
	Content     string
	VideoUrl    pgtype.Text
	ImageUrl    pgtype.Text
	ReleaseDate pgtype.Timestamp
	IsPublished bool
	CreatedAt   pgtype.Timestamp
	UpdatedAt   pgtype.Timestamp
}

type TCube struct {
	ID          int32
	Name        string
	CreatedAt   pgtype.Timestamp
	UpdatedAt   pgtype.Timestamp
	Author      string
	Description string
	BaseID      pgtype.Int4
	ParamsName  string
	Params      []byte
	Type        string
}

type TDataset struct {
	ID          int32
	Name        string
	Type        string
	Params      string
	Schema      string
	NamespaceID pgtype.Int4
	IsExternal  pgtype.Bool
	CreatedAt   pgtype.Timestamp
	Deleted     bool
	Public      bool
	Managed     bool
	ProjectID   pgtype.Int4
	UpdatedAt   pgtype.Timestamp
	VersionID   int32
}

type TDatasetUpdateLog struct {
	ID          int32
	CreatedAt   pgtype.Timestamp
	NamespaceID int32
	DatasetID   int32
	Username    string
	Act         string
	Details     []byte
	ProjectID   pgtype.Int4
	Comment     string
}

type TDatasetV struct {
	ID        int32
	DatasetID pgtype.Int4
	Version   int32
	Params    string
	Schema    string
	Public    bool
	Managed   bool
	Type      string
	Comment   string
	Creator   string
	CreatedAt pgtype.Timestamp
}

type TExperiment struct {
	ID          int32
	TemplateVID int32
	ProjectID   int32
	Status      string
	OrchID      pgtype.Text
	Deleted     bool
	Unlimited   bool
	UpdatedAt   pgtype.Timestamp
}

type TExperimentDataset struct {
	ID           int32
	ExperimentID int32
	DatasetID    int32
	Alias        string
	CreatedAt    pgtype.Timestamp
}

type TExperimentIo struct {
	ID           int32
	ExperimentID int32
	DsType       string
	DsID         int32
}

type TExperimentStatus struct {
	ID             int32
	ExperimentID   int32
	CurrentVersion int32
	LastUpdated    pgtype.Timestamp
	OrchConfig     string
}

type TExperimentTemplate struct {
	ID          int32
	NamespaceID int32
	Name        string
	Deleted     bool
	Description string
}

type TExperimentTemplateV struct {
	ID                    int32
	ParentID              int32
	VersionID             int32
	Yql                   string
	Config                pgtype.Text
	ConfigPatch           pgtype.Text
	CreatedAt             pgtype.Timestamp
	Comment               string
	Creator               string
	AdditionalInformation []byte
}

type TExperimentUpdateLog struct {
	ID           int32
	CreatedAt    pgtype.Timestamp
	ProjectID    int32
	ExperimentID int32
	Username     string
	Act          string
	Details      []byte
	Comment      string
}

type TExperimentVariable struct {
	ID           int32
	ExperimentID int32
	Name         string
	Value        string
	Type         string
	UpdatedAt    pgtype.Timestamp
	VersionID    int32
}

type TExperimentVariableV struct {
	ID         int32
	VariableID pgtype.Int4
	Version    int32
	Value      string
	Type       string
	Comment    string
	Creator    string
	CreatedAt  pgtype.Timestamp
}

type TNamespace struct {
	ID                 int32
	Name               string
	CreatedAt          pgtype.Timestamp
	Deleted            bool
	NamespaceVersionID pgtype.Int4
	Unlimited          bool
}

type TNamespaceConfigV struct {
	ID          int32
	NamespaceID int32
	VersionID   int32
	Config      []byte
	CreatedAt   pgtype.Timestamp
}

type TNamespaceUpdateLog struct {
	ID          int32
	CreatedAt   pgtype.Timestamp
	NamespaceID int32
	Username    string
	Act         string
	Details     []byte
	Comment     string
}

type TNamespaceVariable struct {
	ID          int32
	NamespaceID int32
	Name        string
	Value       string
	Type        string
	CreatedAt   pgtype.Timestamp
}

type TPermissionRequest struct {
	ID              int32
	RequesterUserID int32
	ObjectType      string
	ObjectID        int32
	ObjectAttribute string
	Action          string
	Message         string
	Status          string
	ReviewerUserID  pgtype.Int4
	ReviewedAt      pgtype.Timestamp
	CreatedAt       pgtype.Timestamp
}

type TProject struct {
	ID               int32
	NamespaceID      int32
	Name             string
	Description      string
	CreatedAt        pgtype.Timestamp
	Deleted          bool
	ProjectVersionID pgtype.Int4
	Unlimited        bool
	UpdatedAt        pgtype.Timestamp
	AbcProductID     string
}

type TProjectConfigV struct {
	ID        int32
	ProjectID int32
	VersionID int32
	Config    []byte
	CreatedAt pgtype.Timestamp
}

type TProjectUpdateLog struct {
	ID          int32
	CreatedAt   pgtype.Timestamp
	NamespaceID int32
	ProjectID   int32
	Username    string
	Act         string
	Details     []byte
	Comment     string
}

type TProjectVariable struct {
	ID        int32
	ProjectID int32
	Name      string
	Value     string
	Type      string
	CreatedAt pgtype.Timestamp
}

type TRole struct {
	ID          int32
	Name        string
	Description string
	IdmID       string
}

type TRoleMatch struct {
	RuleID int32
	RoleID int32
}

type TRoleObjectMatch struct {
	ID         int32
	RoleID     int32
	RoleType   string
	ObjectType string
	ObjectID   int32
}

type TRoleOwner struct {
	RoleID int32
	UserID int32
}

type TRule struct {
	ID              int32
	ObjectType      string
	ObjectID        int32
	Action          string
	ObjectAttribute string
}

type TUser struct {
	ID           int32
	Name         string
	IsRobot      pgtype.Bool
	LastSync     pgtype.Timestamp
	Deleted      bool
	Email        pgtype.Text
	DisplayName  pgtype.Text
	PasswordHash pgtype.Text
}

type TUserGroup struct {
	ID   int32
	Name string
}

type TUserGroupMatch struct {
	UserID      int32
	UserGroupID int32
}

type TUserPinnedProject struct {
	ID        int32
	UserID    int32
	ProjectID int32
	PinnedAt  pgtype.Timestamp
}

type TUserRule struct {
	UserID     int32
	RuleID     int32
	AclMatchID int32
}

type VRealDataset struct {
	ID          int32
	Name        string
	Type        string
	Params      string
	Schema      string
	NamespaceID pgtype.Int4
	IsExternal  pgtype.Bool
	CreatedAt   pgtype.Timestamp
	Deleted     bool
	Public      bool
	Managed     bool
	ProjectID   pgtype.Int4
	UpdatedAt   pgtype.Timestamp
	VersionID   int32
}

type VRealExperiment struct {
	ID          int32
	TemplateVID int32
	ProjectID   int32
	Status      string
	OrchID      pgtype.Text
	Deleted     bool
	Unlimited   bool
	UpdatedAt   pgtype.Timestamp
}

type VRealExperimentTemplate struct {
	ID          int32
	NamespaceID int32
	Name        string
	Deleted     bool
	Description string
}

type VRealNamespace struct {
	ID                 int32
	Name               string
	CreatedAt          pgtype.Timestamp
	Deleted            bool
	NamespaceVersionID pgtype.Int4
	Unlimited          bool
}

type VRealProject struct {
	ID               int32
	NamespaceID      int32
	Name             string
	Description      string
	CreatedAt        pgtype.Timestamp
	Deleted          bool
	ProjectVersionID pgtype.Int4
	Unlimited        bool
	UpdatedAt        pgtype.Timestamp
	AbcProductID     string
}
